--- a/index.html
+++ b/index.html
@@ -70,12 +70,31 @@
         <section class="competences" id="competences">
             <div class="competences-content">
                 <div class="code">
-                    <!-- <div class="skill">
+                    <div class="test"></div>
+                    <div class="skill" id="html">
                         <div class="bar">
-                            <div class="progress">
+                            <div class="progress" id="html">
                             </div>
                         </div>
-                    </div> -->
+                    </div>
+                    <div class="skill" id="css">
+                        <div class="bar">
+                            <div class="progress" id="css">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill" id="sass">
+                        <div class="bar">
+                            <div class="progress" id="sass">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill" id="javascript">
+                        <div class="bar">
+                            <div class="progress" id="javascript">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
