--- a/index.html
+++ b/index.html
@@ -69,32 +69,19 @@
         </div>
         <section class="competences" id="competences">
             <div class="competences-content">
-                <div class="code">
-                    <div class="test"></div>
-                    <div class="skill" id="html">
-                        <div class="bar">
-                            <div class="progress" id="html">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill" id="css">
-                        <div class="bar">
-                            <div class="progress" id="css">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill" id="sass">
-                        <div class="bar">
-                            <div class="progress" id="sass">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill" id="javascript">
-                        <div class="bar">
-                            <div class="progress" id="javascript">
-                            </div>
-                        </div>
-                    </div>
+                <div class="languages">
+                    <div class="skill" id="html" value="55"></div>
+                    <div class="skill" id="css" value="50"></div>
+                    <div class="skill" id="sass" value="20"></div>
+                    <div class="skill" id="javascript" value ="10"></div>
+                    <div class="skill" id="python" value="5"></div>
+                </div>
+                <div class="frameworks">
+                    <div class="skill" id="html" value="55"></div>
+                    <div class="skill" id="css" value="50"></div>
+                    <div class="skill" id="sass" value="20"></div>
+                    <div class="skill" id="javascript" value ="10"></div>
+                    <div class="skill" id="python" value="5"></div>
                 </div>
             </div>
         </div>
