--- a/index.html
+++ b/index.html
@@ -70,18 +70,21 @@
         <section class="competences" id="competences">
             <div class="competences-content">
                 <div class="languages">
+                    <h1>Languages</h1><br>
                     <div class="skill" id="html" value="55"></div>
-                    <div class="skill" id="css" value="50"></div>
-                    <div class="skill" id="sass" value="20"></div>
+                    <div class="skill" id="css" value="80"></div>
+                    <div class="skill" id="sass" value="60"></div>
                     <div class="skill" id="javascript" value ="10"></div>
                     <div class="skill" id="python" value="5"></div>
                 </div>
+                <br><br>
                 <div class="frameworks">
-                    <div class="skill" id="html" value="55"></div>
-                    <div class="skill" id="css" value="50"></div>
-                    <div class="skill" id="sass" value="20"></div>
-                    <div class="skill" id="javascript" value ="10"></div>
-                    <div class="skill" id="python" value="5"></div>
+                    <h1>Frameworks</h1><br>
+                    <div class="skill" id="Django" value="10"></div>
+                    <div class="skill" id="Vue" value="5"></div>
+                    <div class="skill" id="Node" value="0"></div>
+                    <div class="skill" id="Nuxt" value ="0"></div>
+                    <div class="skill" id="Mongo" value="0"></div>
                 </div>
             </div>
         </div>
