--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#competences">Languages & Compétences</a>
             </li>
             <li>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#golden-ratio">Portfolio</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -31,8 +31,7 @@
         </ul>
     </nav>
     <main>
-
-        <section class="acceuil" id="acceuil">
+        <section class="acceuil">
             <div class="acceuil-content">
 
                 <div class="presentation">
@@ -66,17 +65,17 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
         <section class="competences" id="competences">
             <div class="competences-content">
                 <div class="languages">
                     <div class="cardTitle">
                         <h1>Languages</h1>
                     </div>
-                    <div class="skill" id="html" value="55"></div>
-                    <div class="skill" id="css" value="80"></div>
+                    <div class="skill" id="css" value="70"></div>
+                    <div class="skill" id="html" value="70"></div>
                     <div class="skill" id="sass" value="60"></div>
-                    <div class="skill" id="javascript" value ="10"></div>
+                    <div class="skill" id="javascript" value="10"></div>
                     <div class="skill" id="python" value="5"></div>
                 </div>
                 <div class="frameworks">
@@ -84,18 +83,28 @@
                         <h1>Frameworks</h1>
                     </div>
 
-                    <div class="skill" id="Django" value="10"></div>
-                    <div class="skill" id="Vue" value="5"></div>
-                    <div class="skill" id="Node" value="0"></div>
-                    <div class="skill" id="Nuxt" value ="0"></div>
-                    <div class="skill" id="Mongo" value="0"></div>
+                    <div class="skill" id="bulma" value="60"></div>
+                    <div class="skill" id="bootstrap" value="55"></div>
+                    <div class="skill" id="django" value="10"></div>
+                    <div class="skill" id="vue" value="5"></div>
+                    <div class="skill" id="node" value="0"></div>
                 </div>
-                </div>
-                <div class="autres">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, ratione repellendus est nesciunt cumque tempore, accusantium cum ex, provident omnis ipsum. Asperiores vitae aspernatur necessitatibus repellendus saepe incidunt impedit dolore distinctio quasi veniam sequi amet nesciunt fuga, aliquid autem animi illo fugiat vel laudantium? Totam sed ratione ut sequi dignissimos. Ipsa accusantium recusandae quisquam modi, aperiam nostrum maiores similique ducimus eaque expedita excepturi consectetur, reprehenderit dolore impedit minus illo sequi sint quas, magni eum nesciunt at rem exercitationem quasi? Ullam animi nam quia sed? Alias minima ipsum deserunt consequatur asperiores incidunt blanditiis recusandae beatae hic optio quae dicta, minus commodi praesentium sit sunt! Qui sint eos sequi assumenda tempore vero ipsum culpa architecto? Quis quae neque amet placeat? Hic accusantium voluptatum quibus</p>
-                </div>
-            
-        </div>
+            </div>
+            <div class="autres">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, ratione repellendus est nesciunt
+                    cumque tempore, accusantium cum ex, provident omnis ipsum. Asperiores vitae aspernatur
+                    necessitatibus repellendus saepe incidunt impedit dolore distinctio quasi veniam sequi amet nesciunt
+                    fuga, aliquid autem animi illo fugiat vel laudantium? Totam sed ratione ut sequi dignissimos. Ipsa
+                    accusantium recusandae quisquam modi, aperiam nostrum maiores similique ducimus eaque expedita
+                    excepturi consectetur, reprehenderit dolore impedit minus illo sequi sint quas, magni eum nesciunt
+                    at rem exercitationem quasi? Ullam animi nam quia sed? Alias minima ipsum deserunt consequatur
+                    asperiores incidunt blanditiis recusandae beatae hic optio quae dicta, minus commodi praesentium sit
+                    sunt! Qui sint eos sequi assumenda tempore vero ipsum culpa architecto? Quis quae neque amet
+                    placeat? Hic accusantium voluptatum quibus</p>
+            </div>
+
+            </div>
+        </section>
 
         <section class="portfolio" id="portfolio">
             <div class="portfolio-content">
@@ -103,7 +112,18 @@
 
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section id="golden-ratio">
+            <div class="base">
+                <!-- <div class="carre1">
+                </div>
+                <div class="rectangle1">
+                    <div class="carre2"></div>
+                    <div class="rectangle2"></div>
+                </div> -->
+            </div>
+        </section>
 
         <section class="contact" id="contact">
             <div class="contact-content">
@@ -111,7 +131,7 @@
                     TESTTESTTEST
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <script type="text/javascript" src="./script.js"></script>
