--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <main>
         <section class="acceuil">
             <div class="acceuil-content">
-
-                <div class="presentation">
+                <div class="photo">
+                </div>
+                <!-- <div class="presentation">
                     <h1>Jesse Piazzini</h1>
                     <div class="infos">
                         <ul>
@@ -47,7 +48,7 @@
                             <li><i class="fas fa-map-marker-alt"></i> Foix (09)</li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <div class="intro">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquam assumenda reprehenderit
                         labore pariatur, reiciendis in, alias architecto sed, facere eligendi quod officiis enim
@@ -134,6 +135,7 @@
         </section>
     </main>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
