--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
     <main>
-        <section class="acceuil">
+        <section class="acceuil" id="acceuil">
             <div class="acceuil-content">
                 <div class="photo">
                 </div>
