--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
             </div>
         </section>
     </main>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./progressBar.js"></script>
+    <script type="text/javascript" src="./volets.js"></script>
+    <script type="text/javascript" src="./fibonacci.js"></script>
+    <script type="text/javascript" src="./hideNav.js"></script>
 </body>
 
 </html>
